# sauna-ui

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  main_electron.js  package-lock.json  package.json  preload.js  webpack.common.config.js
.github/workflows/: build-and-test.yml  node.js.yml  publish-packages.yml  reusable-tauri.yml  tagged-release.yml
config/: webpack.dev.config.js  webpack.prod.config.js
src/: index.html  index.js  index.jsx  preload.js  vite.config.js
src-tauri/: .gitignore  Cargo.toml  SaunaSim.metainfo.xml  build.rs  tauri-prod.conf.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/packageinfo/aur/: PKGBUILD
src-tauri/packageinfo/flathub/: .gitignore  com.saunasim.saunasim.metainfo.xml  com.saunasim.saunasim.yml
src-tauri/packageinfo/snapcraft/: snapcraft.yaml
src-tauri/src/: child_guard.rs  local_store.rs  main.rs  sauna_api_container.rs  tauri_app_state.rs
src-tauri/src/app_state/: atc_scope_package.rs  mod.rs
src-tauri/src/app_state/local_store/: api_connection_details.rs  app_settings.rs  mod.rs  navigraph_settings.rs  session_settings.rs
src-tauri/src/utils/: child_guard.rs  mod.rs  port_finder.rs
src/actions/: aircraft_actions.js  api_connection_handler.js  command_actions.js  data_actions.js  electron_actions.js  enum_actions.js  localStoreActions.js  local_store_actions.js  navigraph_actions.js  radar_actions.js  scope_package_actions.js  session_actions.js  session_storage_actions.js  tauri_actions.js  utilities.js  vatsim_actions.js
src/assets/stylesheets/: index.css  index.scss  sauna-theme.css  theme.scss
src/components/: primereact_form.jsx  primereact_tailwind.js
src/pages/: main.js  main.jsx  main_layout.jsx
src/pages/aircraft/: aircraft.js  aircraft.jsx  aircraft_detail.js  aircraft_detail.jsx  aircraft_row.js  aircraft_row.jsx
src/pages/api_connection/: api_connection.jsx  api_connection_settings.jsx
src/pages/command_window/: command_window.jsx
src/pages/data/: data.js  data.jsx  toolbar.jsx
src/pages/map/: aircraft_marker.jsx  filters_modal.jsx  leaflet_semicircle.jsx  map.jsx  map_icon.js  map_libre.jsx  map_page.js  map_util.js  rotated_marker.jsx
src/pages/scenario_maker/: sauna_scenario_maker.jsx
src/pages/session/: fsd_profile.jsx  fsd_settings.jsx  session.jsx  sweatbox_settings.jsx
src/redux/: reduxStore.js  store.js
src/utils/: WebSocketWrapper.js
(+35 files in other folders)
