[package]
name = "sauna_sim"
version = "0.21.0"
description = "Sauna ATC Training Simulator."
authors = ["Sauna (ATC Training Simulator)"]
license = "MIT"
repository = "git+https://github.com/Sauna-ATC-Training-Simulator/sauna-ui.git"
#default-run = "app"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
zip = "0.6.6"
reqwest = { version = "0.11.22", features = ["blocking"] }
sct-reader = "0.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
